Fix: Removed minimal gap below news image on mobile view

--- a/_sass/_custom_variables.scss
+++ b/_sass/_custom_variables.scss
@@ -48,7 +48,7 @@ $font-sizes: (
 $card-cap-bg:                       $alloy-bb;
 $card-bg:                           $alloy-b;
 
-$news-height:                       8rem;
+$news-height:                       9rem;
 
 // Dropdowns
 
